# SIDwinder

./: .gitignore  0-BuildPlayersForWeb.bat  0-build-examples.bat  0-build.bat  0-test-relocations.bat  0-update_claude_file.bat  0-update_claude_files.bat  1-GenerateFreqTable.bat  1-runserver.bat  2-build-hvsc-index.bat  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Diag.prg  EMBED.md  FreqTableGen.py  LIBSIDPLAYFP_SCOPING.md  Main.cpp  OPTIMIZATION_ANALYSIS.md  RELOCATION.md  RLEDecompress.asm  RaistlinBars.prg  ReadMe.md  SIDwinder.cfg  app_files.cmake  build-examples.bat  build.bat  build.sh  claude_input.md  claude_public.md  claude_sidplayers.md  down.prg  export_for_claude.py  export_public_for_claude.py  export_sidplayers_for_claude.py  firestarter.prg  lars2000.sid  music.prg  netlify.toml  package-lock.json  (+1 more)
.github/workflows/: build.yml  release.yml
Bitmaps/: default.kla  jonegg-crow.kla  redcrab-zebra.kla  rjl-hawkeye.kla  zscs-knightrider.kla
CSDbMusicFetch/: .gitignore  CMakeLists.txt  CSDbFetch.cpp  CSDbFetch.h  HtmlGenerator.cpp  HtmlGenerator.h  Output.txt  README.md  build.bat  main.cpp  release-ids.txt  update-releases.bat
CSDbMusicFetch/xml/: 192867.xml  192869.xml  192902.xml  194049.xml  195382.xml  197529.xml  197865.xml  202282.xml  205472.xml  211439.xml  211649.xml  211650.xml  212356.xml  212358.xml  214468.xml  214738.xml  217748.xml  218299.xml  236972.xml  247797.xml  247798.xml  259027.xml  259028.xml  259033.xml  259407.xml  259557.xml  259586.xml  259596.xml  261993.xml  262091.xml  262101.xml  262104.xml  262112.xml  262176.xml  262189.xml  262431.xml
Examples/: 6r6-axelf.prg  6r6-selfiesfromtheex.prg  92_Little_Shorty_Rockers.prg  JCH-Crystalline.prg  MCH-MontyOnTheRunDnBEdit-2SID.prg  SteelStinsen-DangerDawg.prg  StinsenLeaf-PushThrough.prg  acrouzet-raistlin50.prg  acrouzet-soulspace.prg  celticdesign-7-3.prg  celticdesign-blueearth.prg  dane-copperbooze.prg  dane-elderscrollers.prg  dane-slowmotionsong.prg  drax-expand.prg  drax-twine.prg  drax-twinemain.prg  flex-eurogubbe.prg  flex-hawkeye.prg  flex-lundia.prg  jammer-mm.prg  jammer-soccer.prg  jch-allaroundtheworld.prg  larshoff-blades.prg  leaf-takeitorleafit.prg  lukhash-codeveronica.prg  magnar-airwolf.prg  magnar-firestarter.prg  magnar-lastnight.prg  magnar-magnumpi.prg  magnar-wecomeinpeace.prg  magnar-wonderland12.prg  mch-chordexplorer.prg  mibri-gettinginthevan.prg  mrmouse-downhill.prg  nordischsound-crockettstheme.prg  phat_frog_2sid.prg  proton-knightrider.prg  psycho-nobounds.prg  steel-92littlefshortyrockers.prg  (+11 more)
Logos/: default.kla  facet-acrouzet.kla  facet-mch.kla  facet-mrmouse.kla  facet-psych858o.kla  facet-psychoandstinsen.kla  facet-stinsen.kla  redcrab-celticdesign.kla  redcrab-celticdesign2.kla  redcrab-leaf.kla  redcrab-mch.kla  redcrab-psych858o.kla  redcrab-steel.kla  redcrab-steel2.kla  redcrab-stinsen.kla  redcrab-stinsensteel.kla
SID/: 6r6-selfiesfromtheex.sid  Xiny-Laxity.sid  acrouzet-raistlin50.sid  leaf-takeitorleafit.sid  magnar-withlove.sid  mermaid-474bytesforzyron.sid  shogoon-cheezzytop-3SID.sid  stinsen-onborrowedwings.sid
SIDPlayers/Default/: Default.asm
SIDPlayers/DefaultWithLogo/: DefaultWithLogo.asm
SIDPlayers/DefaultWithPETSCIILogo/: DefaultWithPETSCIILogo.asm
SIDPlayers/INC/: BarStyles.asm  Common.asm  FreqTable.asm  Keyboard.asm  LinkedWithEffect.asm  MemoryPreservation.asm  MusicPlayback.asm  Spectrometer.asm  Spectrometer3Channel.asm  SpectrometerPerVoice.asm  StableRasterSetup.asm  common.asm  freqtable20.asm  freqtable80.asm  spectrometer.asm  spectrometer3channelwave.asm
SIDPlayers/RaistlinBars/: RaistlinBars.asm  RaistlinBars.prg
SIDPlayers/RaistlinBarsWithLogo/: RaistlinBarsWithLogo.asm
SIDPlayers/RaistlinMirrorBars/: RaistlinMirrorBars.asm
SIDPlayers/RaistlinMirrorBarsWithLogo/: RaistlinMirrorBarsWithLogo.asm
SIDPlayers/RaistlinTripleBars/: RaistlinTripleBars.asm
SIDPlayers/RaistlinTripleHybridBars/: RaistlinTripleHybridBars.asm
SIDPlayers/RaistlinTripleMirrorBars/: RaistlinTripleMirrorBars.asm
SIDPlayers/RaistlinVerticalColours/: RaistlinVerticalColours.asm  RaistlinVerticalColours.sym
SIDPlayers/Scrap-Columns/: scrap-columns.asm
SIDPlayers/ScrapColumns/: ScrapColumns.asm
SIDPlayers/SimpleBitmap/: SimpleBitmap.asm  SimpleBitmap.prg
Updates/: columns4+text.asm
hvsc-data/: README.md
public/: _redirects  bar-styles-data.js  color-effects-data.js  color-palettes-data.js  compressor-manager.js  cpu6510.js  cpu6510.wasm  embed-terms.html  error-modal.js  floating-notes.js  font-data.js  genesis-header.css  hvsc-browser.css  hvsc-browser.html  hvsc-browser.js  hvsc-embed.html  hvsc-random.js  hvsc-random.json  hvsc-visualizer.js  hvsc.html  image-preview-manager.js  index.html  petscii-converter.js  petscii-sanitizer.js  png-converter.js  prg-builder.js  robots.txt  sid-playback.js  sid-player.js  sid-worklet-processor.js  sidwinder-core.js  sidwinder.js  sidwinder.wasm  styles-deferred.css  styles.css  text-drop-zone.js  ui.js  visualizer-configs.js  visualizer-registry.js
scripts/: build-seo-pages.js  extract-hvsc.js  generate-palette-pngs.js
src/: CodeFormatter.cpp  CodeFormatter.h  CommandClass.cpp  CommandClass.h  CommandLineParser.cpp  CommandLineParser.h  Common.h  ConfigManager.cpp  ConfigManager.h  Disassembler.cpp  Disassembler.h  DisassemblyWriter.cpp  DisassemblyWriter.h  LabelGenerator.cpp  LabelGenerator.h  Main.cpp  MemoryAnalyzer.cpp  MemoryAnalyzer.h  MemoryConstants.h  PointerBasedSelfModificationDetector.cpp  PointerBasedSelfModificationDetector.h  RelocationStructs.h  RelocationUtils.cpp  RelocationUtils.h  SIDEmulator.cpp  SIDEmulator.h  SIDFileFormat.h  SIDLoader.cpp  SIDLoader.h  SIDPatternFinder.h  SIDShadowRegisterFinder.cpp  SIDShadowRegisterFinder.h  SIDWriteTracker.cpp  SIDWriteTracker.h  SIDpatternFinder.cpp  SIDwinderUtils.cpp  SIDwinderUtils.h  cpu6510.cpp  cpu6510.h
tools/: build-hvsc-index.js
tscrunch-js/: README.md  package.json
wasm/: build.bat  cpu6510.js  cpu6510_wasm.cpp  opcodes.h  png_converter.cpp  rle_compressor.cpp  sid_audio.cpp  sid_processor.cpp
(+71 files in other folders)
